# dict_parser

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml
conf/: dict_data.txt  format.yml
src/: main.cc
src/data_define/builtin/: array.h  base_type.h  float.cc  float.h  int.cc  int.h  string.cc  string.h  uint32.cc  uint32.h  uint64.cc  uint64.h
src/data_define/custom_data/: test_data.cc  test_data.h
src/dict_format/: dict_format.cc  dict_format.h  dict_format.hpp
src/parser/: parser.cc  parser.h
src/register/: dict_register.cc  dict_register.h
src/system/: system_boost.h  system_yaml.h
src/utils/: log_setting.cc  log_setting.h  utils.cc  utils.h  utils.hpp
test/: data_define_test.cc  dict_format_test.cc  unit_test.cc  utils_test.cc
